Sat May  1 00:14:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_io.rb: skip false tests on Windows.
	  [ruby-core:29886]

Fri Apr 30 22:46:27 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* math.c: Math::DomainError < StandardException [ruby-core:29855]

Fri Apr 30 21:40:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/test_open3.rb (TestOpen3#test_commandline): use simple
	  command via shell.  [ruby-dev:41100]

Fri Apr 30 12:05:20 2010  Tanaka Akira  <akr@fsij.org>

	* file.c (file_expand_path): call rb_str_set_len before BUFCHECK to
	  prevent rb_str_resize in BUFCHECK discard the content.

Fri Apr 30 11:48:31 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* string.c (rb_str_sub_bang): String#sub! now raises an error when
	  called on a frozen string, even if no change is made.
	  See [ruby-core:23657]

Fri Apr 30 11:40:44 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* eval.c (make_exception, rb_obj_extend): Fix error messages in case
	  of wrong
	  number of arguments
	
	* file.c (rb_f_test, rb_file_s_umask): ditto
	
	* numeric.c (int_chr, num_step): ditto
	
	* process.c (rb_f_sleep): ditto
	
	* re.c (rb_reg_initialize_m): ditto
	
	* signal.c (rb_f_kill, sig_trap): ditto
	
	* string.c (rb_str_aref_m, rb_str_aset_m, rb_str_count,
	  rb_str_delete_bang,
	  rb_str_slice_bang, rb_str_sub_bang, str_gsub): ditto
	
	* proc.c (curry): rdoc fix

Fri Apr 30 04:09:30 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (TIMET_MAX): should be time_t, not unsigned_time_t.

Fri Apr 30 03:59:08 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (rb_time_unmagnify_to_float): should cast.

Fri Apr 30 03:38:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (fix_mul): the width of fixnum is same as long's on all
	  platforms.

Fri Apr 30 03:17:20 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Improve algorithm for Matrix#determinant and
	  Matrix#rank