@@ -10,6 +10,15 @@ module Test
         obj.pretty_inspect.chomp
       end
 
+      def assert(test, msg = (nomsg = true; nil))
+        unless nomsg or msg.instance_of?(String) or msg.instance_of?(Proc) or
+            (bt = caller).shift.rindex(MiniTest::MINI_DIR, 0)
+          bt = MiniTest.filter_backtrace(bt)
+          raise ArgumentError, "assertion message must be String or Proc, but #{msg.class} was given.", bt
+        end
+        super
+      end
+
       def assert_raise(*args, &b)
         assert_raises(*args, &b)
       end
