@@ -1,0 +1,8 @@
+require 'test/unit'
+class TestAssertion < Test::Unit::TestCase
+  def test_wrong_assertion
+    error, line = assert_raise(ArgumentError) {assert(true, true)}, __LINE__
+    assert_match(/assertion message must be String or Proc, but TrueClass was given/, error.message)
+    assert_match(/\A#{Regexp.quote(__FILE__)}:#{line}:/, error.backtrace[0])
+  end
+end
